browser/themes/pinstripe/browser/browser.css
/* ... */
toolbarbutton
.
bookmark
-
item
{
font
-
weight
:
bold
;
margin
:
0
1px
;
padding
:
0
0
1px
0
;
-
moz
-
padding
-
start
:
7px
;
min
-
width
:
0
;
max
-
width
:
13em
;
color
:
#
222
;
border
:
none
!
important
;
}
toolbarbutton
.
bookmark
-
item
[
type
=
menu
]
>
.
toolbarbutton
-
menu
-
dropmarker
{
-
moz
-
padding
-
end
:
7px
;
}
toolbarbutton
.
bookmark
-
item
[
type
=
menu
]
>
.
toolbarbutton
-
menu
-
dropmarker
[
chromedir
=
"
rtl
"
]
{
-
moz
-
padding
-
start
:
4px
;
-
moz
-
padding
-
end
:
2px
;
}
toolbarbutton
.
bookmark
-
item
[
chromedir
=
"
rtl
"
]
{
-
moz
-
padding
-
start
:
0px
;
-
moz
-
padding
-
end
:
7px
;
}
.
bookmark
-
item
[
container
]
{
list
-
style
-
image
:
url
(
"
chrome
:
/
/
global
/
skin
/
tree
/
folder
.
png
"
)
;
}
.
query
-
item
[
container
]
{
list
-
style
-
image
:
url
(
"
chrome
:
/
/
browser
/
skin
/
places
/
history
.
png
"
)
;
}
toolbarbutton
.
bookmark
-
item
>
.
toolbarbutton
-
text
{
margin
:
0
;
}
toolbarbutton
.
bookmark
-
item
:
not
(
[
container
]
)
>
.
toolbarbutton
-
text
{
-
moz
-
padding
-
end
:
7px
;
}
toolbarbutton
.
bookmark
-
item
[
chromedir
=
"
rtl
"
]
>
.
toolbarbutton
-
text
{
-
moz
-
padding
-
end
:
0
;
-
moz
-
padding
-
start
:
7px
;
}
toolbarbutton
.
bookmark
-
item
:
hover
{
background
:
url
(
"
chrome
:
/
/
global
/
skin
/
toolbar
/
toolbarbutton
-
customhover
-
left
.
png
"
)
no
-
repeat
left
center
;
}
toolbarbutton
.
bookmark
-
item
:
hover
:
active
toolbarbutton
.
bookmark
-
item
[
open
=
"
true
"
]
{
background
:
url
(
"
chrome
:
/
/
browser
/
skin
/
bookmark
-
open
-
left
.
png
"
)
no
-
repeat
left
center
;
}
toolbarbutton
.
bookmark
-
item
:
not
(
[
container
]
)
:
hover
>
.
toolbarbutton
-
text
toolbarbutton
.
bookmark
-
item
[
container
]
:
not
(
[
open
]
)
:
hover
>
.
toolbarbutton
-
menu
-
dropmarker
{
background
:
url
(
"
chrome
:
/
/
global
/
skin
/
toolbar
/
toolbarbutton
-
customhover
-
right
.
png
"
)
no
-
repeat
right
center
;
}
toolbarbutton
.
bookmark
-
item
[
container
]
:
hover
>
.
toolbarbutton
-
text
toolbarbutton
.
bookmark
-
item
[
container
]
:
not
(
[
open
]
)
:
hover
>
.
toolbarbutton
-
menu
-
dropmarker
[
chromedir
=
"
rtl
"
]
#
home
-
button
.
bookmark
-
item
:
hover
>
.
toolbarbutton
-
icon
#
home
-
button
.
bookmark
-
item
[
chromedir
=
"
rtl
"
]
:
hover
>
.
toolbarbutton
-
text
{
background
:
url
(
"
chrome
:
/
/
global
/
skin
/
toolbar
/
toolbarbutton
-
customhover
-
mid
.
png
"
)
repeat
-
x
;
}
#
home
-
button
.
bookmark
-
item
:
hover
[
chromedir
=
"
rtl
"
]
>
.
toolbarbutton
-
icon
toolbarbutton
.
bookmark
-
item
[
chromedir
=
"
rtl
"
]
:
hover
>
.
toolbarbutton
-
text
{
background
:
url
(
"
chrome
:
/
/
global
/
skin
/
toolbar
/
toolbarbutton
-
customhover
-
right
.
png
"
)
no
-
repeat
right
center
;
}
toolbarbutton
.
bookmark
-
item
:
not
(
[
container
]
)
:
hover
:
active
>
.
toolbarbutton
-
text
toolbarbutton
.
bookmark
-
item
[
open
]
>
.
toolbarbutton
-
menu
-
dropmarker
toolbarbutton
.
bookmark
-
item
[
container
]
:
hover
:
active
>
.
toolbarbutton
-
menu
-
dropmarker
{
background
:
url
(
"
chrome
:
/
/
browser
/
skin
/
bookmark
-
open
-
right
.
png
"
)
no
-
repeat
right
center
;
}
toolbarbutton
.
bookmark
-
item
[
container
]
:
hover
:
active
>
.
toolbarbutton
-
text
toolbarbutton
.
bookmark
-
item
[
container
]
[
open
=
"
true
"
]
>
.
toolbarbutton
-
text
#
home
-
button
.
bookmark
-
item
:
hover
:
active
>
.
toolbarbutton
-
icon
toolbarbutton
.
bookmark
-
item
[
container
]
:
hover
:
active
>
.
toolbarbutton
-
menu
-
dropmarker
[
chromedir
=
"
rtl
"
]
toolbarbutton
.
bookmark
-
item
[
container
]
[
open
=
"
true
"
]
>
.
toolbarbutton
-
menu
-
dropmarker
[
chromedir
=
"
rtl
"
]
#
home
-
button
.
bookmark
-
item
:
hover
:
active
[
chromedir
=
"
rtl
"
]
>
.
toolbarbutton
-
text
{
background
:
url
(
"
chrome
:
/
/
browser
/
skin
/
bookmark
-
open
-
mid
.
png
"
)
repeat
-
x
!
important
;
}
toolbarbutton
.
bookmark
-
item
[
chromedir
=
"
rtl
"
]
[
container
]
:
hover
:
active
>
.
toolbarbutton
-
text
toolbarbutton
.
bookmark
-
item
[
chromedir
=
"
rtl
"
]
[
container
]
[
open
]
>
.
toolbarbutton
-
text
#
home
-
button
.
bookmark
-
item
[
chromedir
=
"
rtl
"
]
:
hover
:
active
>
.
toolbarbutton
-
icon
{
background
:
url
(
"
chrome
:
/
/
browser
/
skin
/
bookmark
-
open
-
right
.
png
"
)
no
-
repeat
right
center
!
important
;
}
toolbarbutton
.
bookmark
-
item
-
microsummarized
{
max
-
width
:
20em
;
}
.
bookmark
-
item
>
.
toolbarbutton
-
icon
{
margin
:
0px
;
display
:
none
!
important
;
}
toolbarbutton
.
bookmark
-
item
.
toolbarbutton
-
text
{
font
-
size
:
100
%
!
important
;
margin
:
0px
!
important
;
}
.
bookmark
-
item
.
toolbarbutton
-
text
{
display
:
-
moz
-
box
!
important
;
height
:
16px
!
important
;
padding
-
top
:
1px
;
}
.
bookmark
-
item
>
.
toolbarbutton
-
menu
-
dropmarker
{
list
-
style
-
image
:
url
(
"
chrome
:
/
/
browser
/
skin
/
places
/
folderDropArrow
.
png
"
)
;
height
:
16px
!
important
;
padding
:
5px
5px
4px
3px
;
}
.
bookmark
-
item
[
livemark
]
>
.
toolbarbutton
-
menu
-
dropmarker
{
list
-
style
-
image
:
url
(
"
chrome
:
/
/
browser
/
skin
/
places
/
livemarkFolder
.
png
"
)
;
padding
:
3px
4px
3px
4px
;
}
.
bookmark
-
item
[
livemark
]
{
list
-
style
-
image
:
url
(
"
chrome
:
/
/
browser
/
skin
/
page
-
livemarks
.
png
"
)
;
}
.
bookmark
-
item
[
query
]
{
list
-
style
-
image
:
url
(
"
chrome
:
/
/
browser
/
skin
/
places
/
query
.
png
"
)
;
}
.
bookmark
-
item
[
query
]
[
tagContainer
]
{
list
-
style
-
image
:
url
(
"
chrome
:
/
/
mozapps
/
skin
/
places
/
tagContainerIcon
.
png
"
)
;
}
.
bookmark
-
item
[
query
]
[
dayContainer
]
{
list
-
style
-
image
:
url
(
"
chrome
:
/
/
browser
/
skin
/
places
/
history
.
png
"
)
;
}
.
bookmark
-
item
[
query
]
[
hostContainer
]
{
list
-
style
-
image
:
url
(
"
chrome
:
/
/
global
/
skin
/
tree
/
folder
.
png
"
)
;
}
.
bookmark
-
item
[
query
]
[
hostContainer
]
[
open
]
{
list
-
style
-
image
:
url
(
"
chrome
:
/
/
global
/
skin
/
tree
/
folder
.
png
"
)
;
}
/* ... */

