Bug 463261 - endcap of the buttons & shadows of buttons on the bookmark toolbar are not properly aligned. r=gavin
UltraBlame original commit: 5fcc930b0518a8d56000646384645cf63fa80af5

--- a/browser/themes/pinstripe/browser/browser.css
+++ b/browser/themes/pinstripe/browser/browser.css
@@ -564,9 +564,6 @@ margin
 padding
 :
 0
-0
-1px
-0
 ;
 -
 moz
@@ -1016,7 +1013,7 @@ no
 -
 repeat
 right
-center
+top
 ;
 }
 toolbarbutton
@@ -1202,7 +1199,7 @@ no
 -
 repeat
 right
-center
+top
 ;
 }
 toolbarbutton
@@ -1287,7 +1284,7 @@ no
 -
 repeat
 right
-center
+top
 ;
 }
 toolbarbutton
@@ -1551,7 +1548,7 @@ no
 -
 repeat
 right
-center
+top
 !
 important
 ;
@@ -1588,32 +1585,6 @@ margin
 display
 :
 none
-!
-important
-;
-}
-toolbarbutton
-.
-bookmark
--
-item
-.
-toolbarbutton
--
-text
-{
-font
--
-size
-:
-100
-%
-!
-important
-;
-margin
-:
-0px
 !
 important
 ;
